--- a/about.html
+++ b/about.html
@@ -47,49 +47,27 @@
 
       <nav class="site-nav">
         <div class="logo">
-          <a href="index.html" class="text-white">Append<span class="text-black">.</span></a>
+          <a href="index.html" class="text-white">Silex<span class="text-black">.</span></a>
         </div>
         <div class="row align-items-center">
-          
-          
+
+
           <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li><a href="index.html">Home</a></li>
-              <li class="has-children">
-                <a href="#">Pages</a>
-                <ul class="dropdown">
-                  <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="single.html">Single</a></li>
-                  <li class="active"><a href="about.html">About</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
 
-                  <li class="has-children">
-                    <a href="#">Menu Two</a>
-                    <ul class="dropdown">
-                      <li><a href="#">Sub Menu One</a></li>
-                      <li><a href="#">Sub Menu Two</a></li>
-                      <li><a href="#">Sub Menu Three</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Menu Three</a></li>
-                </ul>
-              </li>
-              <li><a href="elements.html">Elements</a></li>
-              <li><a href="contact.html">Contact us</a></li>
+
+              <li><a href="portfolio.html">Nos Produits</a></li>
+              <li><a href="about.html">Notre histoire</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
 
-            <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right menu-absolute">
-              <li class="cta-button"><a href="https://untree.co/" target="_blank">Free Templates</a></li>
-            </ul>
-
-            <a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
-              <span></span>
-            </a>
 
           </div>
 
-        </div>  
+        </div>
       </nav> <!-- END nav -->
+
 
     </div> <!-- END container -->
 
@@ -269,10 +247,7 @@
     <div class="site-section overlay site-cover-2" style="background-image: url('images/img_v_3-min.jpg')">
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 mx-auto text-center">
-            <h2 class="text-white mb-4">Get this template for free! :)</h2>
-            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
-          </div>
+
         </div>
       </div>
     </div>
@@ -283,7 +258,6 @@
           <div class="col-lg-4">
             <div class="widget">
               <h3>About</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live.</p>
             </div>
             <div class="widget">
               <h3>Connect with us</h3>
@@ -342,9 +316,7 @@
 
         <div class="row justify-content-center text-center copyright">
           <div class="col-md-8">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
-            </br> 
-            <p> Dsitributed by <a href="https://themewagon.com">themewagon</a> </p>
+            </br>
           </div>
         </div>
       </div>
