--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
               <li><a href="about.html">Notre histoire</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
-
+            <a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
+              <span></span>
+            </a>
 
           </div>
 
