--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/favicon.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Append Free HTML Template by Untree.co</title>
+  <title>Silex composite</title>
 </head>
 <body>
 
@@ -52,13 +52,13 @@
         <div class="row align-items-center">
 
 
-          <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
+          <div class="col-12 col-sm-12 col-md-6 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li ><a href="index.html">Home</a></li>
 
 
               <li><a href="portfolio.html">Nos Produits</a></li>
-              <li><a href="about.html">Notre histoire</a></li>
+              <li class="active"><a href="about.html">Notre histoire</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
@@ -79,9 +79,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-7 intro text-center">
-            <h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">About Us</h1>
-            <p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live.</p>
-            <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-primary">Get Started</a></p>
+            <h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">Plongez dans notre  histoire </h1>
+
             
           
           </div>
@@ -109,10 +108,10 @@
             <div class="section-stack">
               <div class="image-stack">
                 <div class="image-stack__item image-stack__item--top">
-                  <img src="images/img_h_2-min.jpg" alt="">
+                  <img src="images/" alt="">
                 </div>
                 <div class="image-stack__item image-stack__item--bottom">
-                  <img src="images/img_h_3-min.jpg" alt="">
+                  <img src="images/img_v_2-min.jpg" alt="">
                 </div>
               </div>
             </div>  
@@ -163,7 +162,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <img src="images/img_v_2-min.jpg" alt="image" class="img-fluid rounded">
+            <img src="images/histoire2.png" alt="image" class="img-fluid rounded">
           </div>
           <div class="col-lg-6 pl-lg-5">
             <h3 class="mb-4 font-weight-bold">Who We Are</h3>
