--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/favicon.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -52,14 +52,15 @@
         <div class="row align-items-center">
 
 
-          <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
+          <div class="col-12 col-sm-12 col-md-6 site-navigation text-center">
+
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li ><a href="index.html">Home</a></li>
 
 
               <li><a href="portfolio.html">Nos Produits</a></li>
               <li><a href="about.html">Notre histoire</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li  class="active"><a href="contact.html">Contact</a></li>
             </ul>
             <a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
               <span></span>
@@ -86,91 +87,95 @@
     </style>
 
     <div class="section-grey custom-gradient-bg">
-      <div class="container bg-white p-5">
+      <div class="container bg-white p-4">
 
         <div class="block">
           <div class="row justify-content-center">
 
-
-            <div class="col-md-12 col-lg-12 pb-4" data-aos="fade-up" data-aos-delay="200">
-
+            <div class="col-md-12 pb-4" data-aos="fade-up" data-aos-delay="200">
 
               <div class="row">
-                <div class="col-lg-4">
-                  <div  class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
+                <div class="col-lg-4 mb-4">
+                  <div class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
+                    <div class="service-icon color-1 mb-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                         <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                       </svg>
-                    </div> <!-- /.icon -->
+                    </div>
                     <div class="service-contents">
                       <p>43 Raymouth Rd. Baltemoer, London 3910</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+                    </div>
+                  </div>
                 </div>
 
-                <div class="col-lg-4">
-                  <div  class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
+                <div class="col-lg-4 mb-4">
+                  <div class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
+                    <div class="service-icon color-1 mb-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                         <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
                       </svg>
-                    </div> <!-- /.icon -->
+                    </div>
                     <div class="service-contents">
                       <p>info@yourdomain.com</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+                    </div>
+                  </div>
                 </div>
 
-                <div class="col-lg-4">
-                  <div  class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
+                <div class="col-lg-4 mb-4">
+                  <div class="service-2 no-shadow link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
+                    <div class="service-icon color-1 mb-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                       </svg>
-                    </div> <!-- /.icon -->
+                    </div>
                     <div class="service-contents">
                       <p>+1 294 3925 3939</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+                    </div>
+                  </div>
                 </div>
               </div>
 
               <form>
                 <div class="row">
-                  <div class="col-6">
+                  <div class="col-md-6 mb-4">
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
                       <input type="text" class="form-control" id="fname">
                     </div>
                   </div>
-                  <div class="col-6">
+                  <div class="col-md-6 mb-4">
                     <div class="form-group">
                       <label class="text-black" for="lname">Last name</label>
                       <input type="text" class="form-control" id="lname">
                     </div>
                   </div>
+                  <div class="col-12 mb-4">
+                    <div class="form-group">
+                      <label class="text-black" for="email">Email address</label>
+                      <input type="email" class="form-control" id="email">
+                    </div>
+                  </div>
+                  <div class="col-12 mb-4">
+                    <div class="form-group">
+                      <label class="text-black" for="message">Message</label>
+                      <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-
-                <div class="form-group">
-                  <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
               </form>
 
             </div>
-
-
-
-
-
           </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    </div>
 
         </div>
 
@@ -220,8 +225,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
-            <h2 class="text-white mb-4">Get this template for free! :)</h2>
-            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
+      
           </div>
         </div>
       </div>
@@ -233,7 +237,7 @@
           <div class="col-lg-4">
             <div class="widget">
               <h3>About</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live.</p>
+              <p>.</p>
             </div>
             <div class="widget">
               <h3>Connect with us</h3>
@@ -294,7 +298,7 @@
           <div class="col-md-8">
             <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
              </br> 
-            <p> Dsitributed by <a href="https://themewagon.com">themewagon</a> </p>
+            <p> n</a> </p>
           </div>
         </div>
       </div>
