--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/favicon.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Append Free HTML Template by Untree.co</title>
+  <title>Silex composite</title>
 </head>
 <body>
 
@@ -52,12 +52,12 @@
         <div class="row align-items-center">
 
 
-          <div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
+          <div class="col-12 col-sm-12 col-md-6 site-navigation text-center">
             <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li ><a href="index.html">Home</a></li>
 
 
-              <li><a href="portfolio.html">Nos Produits</a></li>
+              <li  class="active"><a  href="portfolio.html">Nos Produits</a></li>
               <li><a href="about.html">Notre histoire</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -114,17 +114,19 @@
         font-weight: 100;
         line-height: 25px;
         color: #0F0F0F;
-        opacity: 0.8;
+        opacity: 1;
       }
 
     </style>
     <div class="banner">
       <div class="content">
-        <h1>Design Your House</h1>
+        <h1>
+          Concevez votre cuisine</h1>
         <p>
-          Let's create a home you love. Refreshing a room or transforming your whole home?
+          Créez une cuisine que vous aimez. Rafraîchir une pièce ou transformer toute votre cuisine ?
           <br>
-          Make it happen with our Home Design Stylists.
+          Réalisez-le avec nos stylistes en design de cuisine.
+
         </p>
 
       </div>
@@ -144,116 +146,115 @@
         <div class="filters" data-aos="fade-up" data-aos-delay="100">
           <ul>
             <li class="active" data-filter="*">All</li>
-            <li data-filter=".packaging">Packaging</li>
-            <li data-filter=".mockup">Mockup</li>
-            <li data-filter=".typography">Typography</li>
-            <li data-filter=".photography">Photography</li>
+            <li data-filter=".un_seul_bac">Un seul bac</li>
+            <li data-filter=".deux_bacs">Deux bacs</li>
+            <li data-filter=".avec_plateau">Avec plateau</li>
           </ul>
         </div>
 
         <div class="filters-content mb-5" data-aos="fade-up" data-aos-delay="200">
           <div class="row grid">
-            <div class="isotope-card col-sm-4 all mockup">
-              <a href="images/img_v_4-min.jpg" data-fancybox="gal">
-                <img src="images/img_v_4-min.jpg" alt="Image" class="img-fluid">
+            <div class="isotope-card col-md-6 all deux_bac avec_plateau">
+              <a href="images/duo-techinque.png" data-fancybox="gal">
+                <img src="images/Duo.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>Card Vol. 3</h3>
-                  <div class="cat">Mockup</div>
+                  <h3>Duo</h3>
+                  <div class="cat">deux bacs avec plateau</div>
                 </div>
               </a>
             </div>
 
-            <div class="isotope-card col-sm-4 all mockup">
-              <a href="images/img_h_1-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_1-min.jpg" alt="Image" class="img-fluid">
+            <div class="isotope-card col-md-6  all deux_bacs">
+              <a href="images/bochra-technique.png" data-fancybox="gal">
+                <img src="images/bochra.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>Card Vol. 3</h3>
-                  <div class="cat">Mockup</div>
+                  <h3>Bochra</h3>
+                  <div class="cat">deux bacs</div>
                 </div>
               </a>
             </div>
-            <div class="isotope-card col-sm-4 all mockup">
-              <a href="images/img_h_8-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_8-min.jpg" alt="Image" class="img-fluid">
+            <div class="isotope-card col-md-6 all deux_bacs">
+              <a href="images/erij-fiche-technique.png" data-fancybox="gal">
+                <img src="images/erij.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>Card Vol. 3</h3>
-                  <div class="cat">Mockup</div>
+                  <h3>Erij</h3>
+                  <div class="cat">deux bacs</div>
                 </div>
               </a>
             </div>
-            <div class="isotope-card col-sm-4 all typography">
-              <a href="images/img_h_2-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_2-min.jpg" alt="Image" class="img-fluid">
+            <div class="isotope-card col-md-6 all deux_bacs avec_plateau">
+              <a href="images/oasis-fiche-technique.png" data-fancybox="gal">
+                <img src="images/oasis-e1707824280726.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>House Design</h3>
-                  <div class="cat">Typography</div>
-                </div>
-              </a>
-
-            </div>                            
-            <div class="isotope-card col-sm-4 all mockup">
-              <a href="images/img_h_3-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_3-min.jpg" alt="Image" class="img-fluid">
-                <div class="contents">
-                  <h3>WoW</h3>
-                  <div class="cat">Mockup</div>
-                </div>
-              </a>
-            </div>
-            <div class="isotope-card col-sm-4 all packaging">
-              <a href="images/img_h_4-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_4-min.jpg" alt="Image" class="img-fluid">
-                <div class="contents">
-                  <h3>Seat</h3>
-                  <div class="cat">Packaging</div>
-                </div>
-              </a>
-            </div>
-            <div class="isotope-card col-sm-4 all typography">
-              <a href="images/img_h_5-min.jpg" data-fancybox="gal">
-                <img src="images/img_h_5-min.jpg" alt="Image" class="img-fluid">
-                <div class="contents">
-                  <h3>Seat</h3>
-                  <div class="cat">Packaging</div>
-                </div>
-              </a>
-            </div>
-            <div class="isotope-card col-sm-4 all photography">
-              <a href="images/img_v_1-min.jpg" data-fancybox="gal">
-                <img src="images/img_v_1-min.jpg" alt="Image" class="img-fluid">
-                <div class="contents">
-                  <h3>House Design</h3>
-                  <div class="cat">Photography</div>
-                </div>
-              </a>
-            </div>
-            <div class="isotope-card col-sm-4 all photography">
-              <a href="images/img_v_2-min.jpg" data-fancybox="gal">
-                <img src="images/img_v_2-min.jpg" alt="Image" class="img-fluid">
-                <div class="contents">
-                  <h3>House Design</h3>
-                  <div class="cat">Photography</div>
+                  <h3>Oasis</h3>
+                  <div class="cat">deux bacs avec plateau</div>
                 </div>
               </a>
 
             </div>
-
-            <div class="isotope-card col-sm-4 all photography">
-              <a href="images/img_v_8-min.jpg" data-fancybox="gal">
-                <img src="images/img_v_8-min.jpg" alt="Image" class="img-fluid">
+            <div class="isotope-card col-md-6 all un_seul_bac">
+              <a href="images/farah-fiche-technique.png" data-fancybox="gal">
+                <img  src="images/farah.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>House Design</h3>
-                  <div class="cat">Photography</div>
+                  <h3>Farah</h3>
+                  <div class="cat">un seul bac</div>
+                </div>
+              </a>
+            </div>
+            <div class="isotope-card col-md-6 all un_seul_bac">
+              <a href="images/farah-fiche-technique.png" data-fancybox="gal">
+                <img  src="images/rond.png" alt="Image" class="img-fluid">
+                <div class="contents">
+                  <h3>Rond</h3>
+                  <div class="cat">un seul bac</div>
+                </div>
+              </a>
+            </div>
+            <div class="isotope-card col-md-6 all deux_bacs">
+              <a href="images/petra-2-fiche-technique.png" data-fancybox="gal">
+                <img src="images/petra.png" alt="Image" class="img-fluid">
+                <div class="contents">
+                  <h3>Petra</h3>
+                  <div class="cat">deux bacs</div>
+                </div>
+              </a>
+            </div>
+            <div class="isotope-card col-md-6 all deux_bacs">
+              <a href="images/roubi-fiche-technique.png" data-fancybox="gal">
+                <img src="images/roubi-e1707824136332.png" alt="Image" class="img-fluid">
+                <div class="contents">
+                  <h3>Roubi</h3>
+                  <div class="cat">deux bacs</div>
+                </div>
+              </a>
+            </div>
+            <div class="isotope-card col-md-6 all un_seul_bac avec_plateau">
+              <a href="images/uno-technique.png" data-fancybox="gal">
+                <img src="images/uno-1.png" alt="Image" class="img-fluid">
+                <div class="contents">
+                  <h3>Uno</h3>
+                  <div class="cat">un seul bac avec plateau</div>
+                </div>
+              </a>
+            </div>
+            <div class="isotope-card col-md-6 all deux_bacs">
+              <a href="images/racha-fiche-technique.png" data-fancybox="gal">
+                <img src="images/racha-e1707823069997.png" alt="Image" class="img-fluid">
+                <div class="contents">
+                  <h3>Racha</h3>
+                  <div class="cat">deux bacs</div>
                 </div>
               </a>
 
             </div>
-            <div class="isotope-card col-sm-4 all photography">
-              <a href="images/img_v_3-min.jpg" data-fancybox="gal">
-                <img src="images/img_v_3-min.jpg" alt="Image" class="img-fluid">
+
+
+            <div class="isotope-card col-md-6 all deux_bacs">
+              <a href="images/line-fiche-technique.png" data-fancybox="gal">
+                <img src="images/line.png" alt="Image" class="img-fluid">
                 <div class="contents">
-                  <h3>House Design</h3>
-                  <div class="cat">Photography</div>
+                  <h3>Line</h3>
+                  <div class="cat">deux bacs</div>
                 </div>
               </a>
 
@@ -292,7 +293,6 @@
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
                 <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
                 <li><a href="#"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
