--- a/portfolio.html
+++ b/portfolio.html
@@ -78,43 +78,52 @@
 
 
 
-      .banner{
+      .banner {
         width: 100%;
         height: 80vh;
-        background:
-                linear-gradient(to bottom right, rgb(79, 63, 70,0.7), rgba(229, 231, 230, 0.6)),
-                url("images/banner5.png");
+        background: linear-gradient(to bottom right, rgb(79, 63, 70, 0.7), rgba(229, 231, 230, 0.6)), url("images/banner5.png");
         background-position: center;
-        background-size: cover; /* Ajuster la taille de l'image pour couvrir complètement la bannière */
+        background-size: cover;
         background-repeat: no-repeat;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajouter une ombre douce */
-
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        position: relative; /* Ajouter cette propriété pour que .content soit positionné par rapport à .banner */
       }
 
-      .content{
+      .content {
         position: absolute;
         top: 50%;
-        right: 25%;
-        width: 50%;
-        transform: translateY(-50%);
+        left: 50%; /* Ajuster la position au centre */
+        transform: translate(-50%, -50%); /* Centrer horizontalement et verticalement */
+        width: 80%; /* Utiliser une largeur relative pour s'adapter à différentes tailles d'écran */
         text-align: center;
         color: white;
       }
 
-      .content h1{
-        font-size: 70px;
-        margin-top: 60px;
+      .content h1 {
+        font-size: 4vw; /* Utiliser une taille de police responsive */
+        margin-top: 2vw; /* Espace adaptatif en fonction de la taille de la police */
         font-weight: 900;
-        color: #0F0F0F;
         text-transform: uppercase;
       }
 
-      .content p{
-        margin: 0px;
+      .content p {
+        margin: 0;
         font-weight: 100;
-        line-height: 25px;
-        color: #0F0F0F;
-        opacity: 1;
+        line-height: 1.4;
+        font-size: 2vw; /* Taille de police adaptative */
+      }
+
+      /* Media query pour ajuster le style sur les écrans plus petits */
+      @media (max-width: 768px) {
+        .content h1 {
+          font-size: 6vw; /* Ajuster la taille de la police pour les écrans plus petits */
+          margin-top: 3vw;
+        }
+
+        .content p {
+          font-size: 3vw; /* Ajuster la taille de la police pour les écrans plus petits */
+          line-height: 1.3;
+        }
       }
 
     </style>
@@ -147,7 +156,7 @@
           <ul>
             <li class="active" data-filter="*">All</li>
             <li data-filter=".un_seul_bac">Un seul bac</li>
-            <li data-filter=".deux_bacs">Deux bacs</li>
+            <li data-filter=".deux_bacs">Deux_bacs</li>
             <li data-filter=".avec_plateau">Avec plateau</li>
           </ul>
         </div>
