--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
           <ul>
             <li class="active" data-filter="*">All</li>
             <li data-filter=".un_seul_bac">Un seul bac</li>
-            <li data-filter=".deux_bacs">Deux_bacs</li>
+            <li data-filter=".deux_bacs">Deux bacs</li>
             <li data-filter=".avec_plateau">Avec plateau</li>
           </ul>
         </div>
