--- a/about.html
+++ b/about.html
@@ -85,6 +85,8 @@
         url("images/banner15.jpg") no-repeat fixed center;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajoute une ombre douce */
         position: relative; /* Retirez position:absolute pour permettre le défilement sur mobile */
+                background-size: cover/* Retirez position:absolute pour permettre le défilement sur mobile */
+
       }
 
       /* Styles pour le contenu à l'intérieur de la bannière */
