--- a/about.html
+++ b/about.html
@@ -84,9 +84,8 @@
         background: linear-gradient(to bottom right, rgba(79, 63, 70, 0.7), rgba(250, 118, 156, 0.2)) ,
         url("images/banner15.jpg") no-repeat fixed center;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajoute une ombre douce */
-        position: relative; /* Retirez position:absolute pour permettre le défilement sur mobile */
-                background-size: cover/* Retirez position:absolute pour permettre le défilement sur mobile */
-
+        position: relative;
+        background-size: cover/* Retirez position:absolute pour permettre le défilement sur mobile */
       }
 
       /* Styles pour le contenu à l'intérieur de la bannière */
