--- a/contact.html
+++ b/contact.html
@@ -87,12 +87,12 @@
     </style>
 
     <div class="section-grey custom-gradient-bg">
-      <div class="container bg-white p-4">
+      <div class="container bg-light p-4">
 
         <div class="block">
           <div class="row justify-content-center">
 
-            <div class="col-md-12 pb-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-sm-12 pb-4" data-aos="fade-up" data-aos-delay="200">
 
               <div class="row">
                 <div class="col-lg-4 mb-4">
@@ -137,7 +137,7 @@
 
               <form>
                 <div class="row">
-                  <div class="col-md-6 mb-4">
+                  <div class="col-sm-6 mb-4">
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
                       <input type="text" class="form-control" id="fname">
@@ -162,7 +162,7 @@
                     </div>
                   </div>
                   <div class="col-12">
-                    <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
+                    <button type="submit" class="btn btn-primary-hover-outline bg-light">Send Message</button>
                   </div>
                 </div>
               </form>
@@ -225,7 +225,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
-      
+            <h2 class="text-white mb-4"></h2>
+            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
           </div>
         </div>
       </div>
@@ -303,12 +304,15 @@
         </div>
       </div>
     </div>
-    
+
 
     <div id="overlayer"></div>
     <div class="loader">
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
+      <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+      <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="1" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
+      <div style="display: flex; justify-content: center;">
+        <span>Loading...</span>
+      </div>
       </div>
     </div>
 
