--- a/about.html
+++ b/about.html
@@ -358,13 +358,16 @@
         </div>
       </div>
     </div>
-    
+
 
     <div id="overlayer"></div>
     <div class="loader">
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
+      <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+      <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="1" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
+      <div style="display: flex; justify-content: center;">
+        <span>Loading...</span>
       </div>
+    </div>
     </div>
 
     <script src="js/jquery-3.5.1.min.js"></script>
