--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,8 @@
           font-size: 3vw; /* Ajuster la taille de la police pour les écrans plus petits */
           line-height: 1.3;
         }
-      }
+      
+
 
     </style>
     <div class="banner">
@@ -359,14 +360,17 @@
         </div>
       </div>
     </div>
-    
 
-    <div id="overlayer"></div>
-    <div class="loader">
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
-    </div>
+
+                                                                                                                                        <div id="overlayer"></div>
+                                                                                                                                                              <div class="loader">
+                                                                                                                                                                                 <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+                                                                                                                                                                                                                                                                                              <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="1" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   <div style="display: flex; justify-content: center;">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       <span>Loading...</span>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             </div>
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.0.min.js"></script>
