--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
             <h2 class="text-white mb-4"></h2>
-            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
+            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary"></a></p>
           </div>
         </div>
       </div>
