--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
+  <meta name="author" content="Bouharb">
   <link rel="shortcut icon" href="images/favicon.png">
 
   <meta name="description" content="" />
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Append Free HTML Template by Untree.co</title>
+  <title>Silex composite</title>
 </head>
 <body>
 
@@ -226,7 +226,6 @@
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
             <h2 class="text-white mb-4"></h2>
-            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
           </div>
         </div>
       </div>
@@ -246,7 +245,6 @@
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
                 <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
                 <li><a href="#"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
@@ -295,15 +293,7 @@
           </div>
         </div>
 
-        <div class="row justify-content-center text-center copyright">
-          <div class="col-md-8">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
-             </br> 
-            <p> n</a> </p>
-          </div>
-        </div>
-      </div>
-    </div>
+  
 
 
     <div id="overlayer"></div>
