--- a/about.html
+++ b/about.html
@@ -26,12 +26,11 @@
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/time.css">
 
   <title>Silex composite</title>
 </head>
 <body>
-
 
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
@@ -125,37 +124,113 @@
     </div>
 
 
-    </div>
 
       <div class="slant" style="background-image: url('images/slant.svg');"></div>
-    </div>
 
-    <div class="site-section about-section ">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-lg-4">
-            <h2 class="section-title mb-4">A small river named Duden flows</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p class="mt-4"><a href="#" class="btn btn-primary btn-md">Book now</a></p>
+
+
+    <div class="site-section" >
+      <div class="container ">
+        <div class="row align-items-center" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-6 ">
+            <img  src="images/histoire2.png" alt="image" class="img-fluid rounded">
           </div>
-          <div class="col-lg-7 pl-lg-5 position-relative ">
+          <div class="col-lg-6 pl-lg-5">
+            <h3 class="mb-4 font-weight-bold">À Propos de Silex</h3>
+            <p>Située dans une zone industrielle Ksour essef, notre usine est spécialisée dans la fabrication d'éviers de cuisine de haute qualité. Nous sommes dédiés à l'ingénierie de précision et au design innovant.</p>
 
-
-            <div class="section-stack">
-              <div class="image-stack">
-                <div class="image-stack__item image-stack__item--top">
-                  <img src="images/" alt="">
-                </div>
-                <div class="image-stack__item image-stack__item--bottom">
-                  <img src="images/img_v_2-min.jpg" alt="">
-                </div>
-              </div>
-            </div>  
-
+            <p>Entourés par le bruit des machines, nous façonnons méticuleusement des matériaux durables en de magnifiques éléments de cuisine. Chaque évier est le reflet de notre engagement envers l'artisanat.</p>
+            <ul class="list-check list-unstyled primary">
+              <li>Pionniers dans la conception et la fabrication d'éviers de cuisine</li>
+              <li>Utilisation de matériaux avancés pour la durabilité</li>
+              <li>Artisanat méticuleux dans les moindres détails</li>
+              <li>Dévoués à l'innovation et à la qualité</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+
+
+
+
+      <div class="intro">
+        <h1>Explorons  notre parcours </h1>
+      </div>
+      <main>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Magnetic drum</h2>
+              <time>1932</time> - Gustav Taushek
+            </header>
+            <p>A rotating cylinder coated with a magnetic material, used for storing data.</p>
+            <img src="images/table.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Magnetic tape</h2>
+              <time>1951</time> - Fritz Pfleumer
+            </header>
+            <p>A long strip of plastic coated with a magnetic material, used for storing data.</p>
+            <img src="images/bathub.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Zip drive</h2>
+              <time>1980</time> - Iomega
+            </header>
+            <p>A removable disk drive with a capacity of up to 100 MB.</p>
+            <img src="images/factory.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Hard disk drive</h2>
+              <time>1956</time> - IBM
+            </header>
+            <p>A stack of rotating platters coated with a magnetic material.</p>
+            <img src="images/ship.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Floppy disk</h2>
+              <time>1967</time> - Alan Shugart
+            </header>
+            <p>A small, flexible disk coated with a magnetic material, used for storing data.</p>
+            <img src="images/baathroom.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Compact cassette</h2>
+              <time>1971</time> - Philips
+            </header>
+            <p>A small, magnetic tape cassette used for storing data.</p>
+            <img src="images/bathroom.png" alt="" />
+          </div>
+        </article>
+        <article class="stop">
+          <div class="text">
+            <header>
+              <h2>Zip drive</h2>
+              <time>1980</time> - Iomega
+            </header>
+            <p>A removable disk drive with a capacity of up to 100 MB.</p>
+            <img src="images/sink.png" alt="" />
+          </div>
+        </article>
+
+      </main>
+
 
     <div class="site-section bg-light">
       <div class="container">
@@ -194,27 +269,7 @@
     </div>
         
 
-    <div class="site-section">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <img src="images/histoire2.png" alt="image" class="img-fluid rounded">
-          </div>
-          <div class="col-lg-6 pl-lg-5">
-            <h3 class="mb-4 font-weight-bold">Who We Are</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. </p>
-            <ul class="list-check list-unstyled primary">
-              <li>Far far away, behind the word mountains</li>
-              <li>Vokalia and Consonantia there</li>
-              <li>Separated they live</li>
-              <li>Semantics a large language ocean</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="site-section slider-team-wrap bg-light">
       <div class="container">
@@ -302,7 +357,6 @@
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
                 <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
                 <li><a href="#"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
@@ -363,8 +417,11 @@
     <div id="overlayer"></div>
     <div class="loader">
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-      <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="2" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
-      <div style="display: flex; justify-content: center;">
+      <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
+      <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
+      <dotlottie-player src="https://lottie.host/5db7160c-cff4-4c31-9c90-58eb8b74a55a/3KUK36JxM2.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>      <div style="display: flex; justify-content: center;">
         <span>Loading...</span>
       </div>
     </div>
