--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
         <div class="row justify-content-between">
           <div class="col-lg-4">
             <div class="widget">
-              <h3>About</h3>
             </div>
             <div class="widget">
               <h3>Connect with us</h3>
@@ -285,6 +284,7 @@
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
                 <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
+                <li><a href="#"><span class="icon-dribbble"></span></a></li>
                 <li><a href="#"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
@@ -333,15 +333,20 @@
           </div>
         </div>
 
-      
+
+      </div>
+    </div>
 
 
     <div id="overlayer"></div>
     <div class="loader">
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-        <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="2" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
+
+
+        <dotlottie-player src="https://lottie.host/5db7160c-cff4-4c31-9c90-58eb8b74a55a/3KUK36JxM2.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
         <div style="display: flex; justify-content: center;">
             <span>Loading...</span>
+        </div>
         </div>
     </div>
     </div>
