--- a/single.html
+++ b/single.html
@@ -58,7 +58,7 @@
               <li class="has-children">
                 <a href="#">Pages</a>
                 <ul class="dropdown">
-                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="produits.html">Portfolio</a></li>
                   <li class="active"><a href="single.html">Single</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
