--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
   <meta name="author" content="Bouharb">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
-
+  <meta name="description" content="Trouvez des éviers, baignoires et vasques en quartz et marbre moderne chez nous. Améliorez le style de votre salle de bain avec nos produits de qualité supérieure. Découvrez nos options de personnalisation et bénéficiez d'une expédition rapide." />
+  <meta name="keywords" content="éviers haut de gamme vasques de luxe baignoires élégantes produits de salle de bain modernes designs de salle de bain contemporains matériaux de qualité pour salle de bain" />
+  <meta name="robots" content="index, follow">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   
@@ -32,7 +32,7 @@
           crossorigin="anonymous"
   ></script>
 
-  <title>Silex composite</title>
+  <title>Contact</title>
 </head>
 <body>
 
@@ -68,7 +68,7 @@ Merci d'avance !" target=”_blank” class="whatsapp-btn">
               <li ><a href="index.html">Home</a></li>
 
 
-              <li><a href="portfolio.html">Nos Produits</a></li>
+              <li><a href="produits.html">Nos Produits</a></li>
               <li><a href="about.html">Notre histoire</a></li>
               <li  class="active"><a href="contact.html">Contact</a></li>
             </ul>
@@ -188,7 +188,7 @@ Merci d'avance !" target=”_blank” class="whatsapp-btn">
 
 
 
-     <div class="site-footer">
+     <footer class="site-footer">
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-4">
@@ -252,7 +252,7 @@ Merci d'avance !" target=”_blank” class="whatsapp-btn">
 
 
       </div>
-    </div>
+    </footer>
 
 
     <div id="overlayer"></div>
