--- a/about.html
+++ b/about.html
@@ -148,32 +148,35 @@ Merci d'avance !" target=”_blank” class="whatsapp-btn">
 
 
 
-    <section class="site-section" >
-      <div class="container ">
-        <div class="row align-items-center" data-aos="fade-up" data-aos-delay="300">
-          <div class="col-lg-6 ">
-            <img  src="images/histoire2.png" alt="Robuste marbre" class="img-fluid rounded">
-          </div>
-          <div class="col-lg-6 pl-lg-5">
-            <h3 class="mb-4 font-weight-bold">À Propos de Silex</h3>
-            <p>Située dans une zone industrielle Ksour essef, notre usine est spécialisée dans la fabrication d'éviers de cuisine de haute qualité. Nous sommes dédiés à l'ingénierie de précision et au design innovant.</p>
-
-            <p>Entourés par le bruit des machines, nous façonnons méticuleusement des matériaux durables en de magnifiques éléments de cuisine. Chaque évier est le reflet de notre engagement envers l'artisanat.</p>
-            <ul class="list-check list-unstyled primary">
-              <li>Pionniers dans la conception et la fabrication d'éviers de cuisine</li>
-              <li>Utilisation de matériaux avancés pour la durabilité</li>
-              <li>Artisanat méticuleux dans les moindres détails</li>
-              <li>Dévoués à l'innovation et à la qualité</li>
-            </ul>
-          </div>
-        </div>
+<section class="site-section" itemscope itemtype="http://schema.org/AboutPage">
+  <div class="container">
+    <div class="row align-items-center" data-aos="fade-up" data-aos-delay="300">
+      <div class="col-lg-6">
+        <img src="images/histoire2.png" alt="Cuisine moderne en marbre" class="img-fluid rounded" itemprop="image">
       </div>
-    </section>
+      <div class="col-lg-6 pl-lg-5">
+        <h2 class="mb-4 font-weight-bold" itemprop="headline">À Propos de Silex</h2>
+        <p itemprop="description">
+          Située dans une zone industrielle à Ksour essef, notre usine est spécialisée dans la fabrication d'éviers de cuisine de haute qualité. Nous sommes dédiés à l'ingénierie de précision et au design innovant.
+        </p>
+        <p itemprop="description">
+          Entourés par le bruit des machines, nous façonnons méticuleusement des matériaux durables en de magnifiques éléments de cuisine. Chaque évier est le reflet de notre engagement envers l'artisanat.
+        </p>
+        <ul class="list-check list-unstyled primary" itemprop="about">
+          <li itemprop="featureList">Pionniers dans la conception et la fabrication d'éviers de cuisine</li>
+          <li itemprop="featureList">Utilisation de matériaux avancés pour la durabilité</li>
+          <li itemprop="featureList">Artisanat méticuleux dans les moindres détails</li>
+          <li itemprop="featureList">Dévoués à l'innovation et à la qualité</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
 
-      <div class="intro">
+<div class="intro">
         <h1>Explorons  notre parcours </h1>
       </div>
       <main>
