--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Bouharb">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <meta name="description" content="Trouvez des éviers, baignoires et vasques en quartz et marbre moderne chez nous. Améliorez le style de votre salle de bain avec nos produits de qualité supérieure. Découvrez nos options de personnalisation et bénéficiez d'une expédition rapide." />
-  <meta name="keywords" content="éviers haut de gamme vasques de luxe baignoires élégantes produits de salle de bain modernes designs de salle de bain contemporains matériaux de qualité pour salle de bain" />
+  <meta name="description" content="Trouvez des éviers, baignoires et vasques en quartz et marbre moderne chez nous. Améliorez le style de votre salle de bain avec nos produits de qualité supérieure." />
+  <meta name="keywords" content="éviers haut de gamme vasques de luxe baignoires élégantes produits de salle de bain modernes " />
   <meta name="robots" content="index, follow">
 
 
@@ -160,7 +160,8 @@ Merci d'avance !" target=”_blank” class="whatsapp-btn">
           Située dans une zone industrielle à Ksour essef, notre usine est spécialisée dans la fabrication d'éviers de cuisine de haute qualité. Nous sommes dédiés à l'ingénierie de précision et au design innovant.
         </p>
         <p itemprop="description">
-          Entourés par le bruit des machines, nous façonnons méticuleusement des matériaux durables en de magnifiques éléments de cuisine. Chaque évier est le reflet de notre engagement envers l'artisanat.
+          Au cœur du processus de fabrication, nous transformons avec soin des matériaux durables en de magnifiques éléments de cuisine. Chaque évier est le reflet de notre passion pour l'artisanat et l'excellence.
+
         </p>
         <ul class="list-check list-unstyled primary" itemprop="about">
           <li itemprop="featureList">Pionniers dans la conception et la fabrication d'éviers de cuisine</li>
